# myrtle

./: .flake8  .gitignore  README.md  TODO.md  config.toml  pyproject.toml
doc/: release_checklist.md  syncronization.md
src/: rtrl_bench.py
src/myrtle/: README.md  bench.py  bench_dash.py  config.py  config.toml  demo.py
src/myrtle/agents/: README.md  base_agent.py  fnc_buckettree_ziptie_one_step.py  fnc_one_step_curiosity.py  fnc_ziptie_one_step.py  greedy_state_blind.py  greedy_state_blind_eps.py  q_learning_buckettree_ziptie.py  q_learning_curiosity.py  q_learning_eps.py  q_learning_ziptie_curiosity.py  random_multi_action.py  random_single_action.py  value_avg_curiosity.py
src/myrtle/monitors/: bench.js  bench_monitor.html  bench_monitor.js  config.js  drawingTools.js  num.js  pendulum.js  pendulum_monitor.html  pendulum_monitor.js  server.py
src/myrtle/reports/: buckettree.py  fnc.py  report_config.py  reward.py  timing.py  ziptie.py
src/myrtle/sandbox/: pendulum_one_hot_q_learning_curiosity.py
src/myrtle/tests/: base_agent_test.py  bench_test.py  config_test.py  fixtures.py  integration_test_suite.py  monitor_server_test.py  pendulum_world_test.py  test_base_agent.py  test_base_world.py  test_bench.py
src/myrtle/worlds/: README.md  base_world.py  contextual_bandit.py  contextual_bandit_2d.py  intermittent_reward_bandit.py  nonstationary_bandit.py  one_hot_contextual_bandit.py  pendulum.py  pendulum_discrete.py  pendulum_discrete_one_hot.py  stationary_bandit.py
src/worlds/: README.md  base_world.py
tests/: test_base_agent.py  test_base_world.py  test_bench.py  test_pendulum_world.py
