[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myrtle"
version = "0.1.0"
authors = [
  { name="Brandon Rohrer", email="brohrer@gmail.com" },
]
description = '''
A workbench and benchmarking framework
for real-time reinforcement learning
with multiple intermittent rewards'''

readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pacemaker-lite>=0.1.3",
    "sqlite-logging",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://codeberg.org/brohrer/myrtle"
Documentation = "https://codeberg.org/brohrer/myrtle/src/branch/main/README.md"
Repository = "https://codeberg.org/brohrer/myrtle.git"

# configuration set in myrtle/.flake8
# [tool.flake8]
# max-line-length = 88

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
